--- a/_includes/head.html
+++ b/_includes/head.html
@@ -105,6 +105,10 @@
 
   {% include metadata-hook.html %}
 
+  {% if jekyll.environment == 'production' and webmaster_verifications.google %}
+    <meta name="google-site-verification" content="{{ webmaster_verifications.google }}" />
+  {% endif %}
+
   {% if jekyll.environment == 'production' and site.google_analytics %}
     {% include analytics.html %}
   {% endif %}
