--- a/_includes/head.html
+++ b/_includes/head.html
@@ -109,7 +109,7 @@
     <meta name="google-site-verification" content="{{ webmaster_verifications.google }}" />
   {% endif %}
 
-  {% if jekyll.environment == 'production' and site.google_analytics %}
+  {% if jekyll.environment == 'production' and site.analytics.google.id %}
     {% include analytics.html %}
   {% endif %}
 </head>
