--- a/_includes/head.html
+++ b/_includes/head.html
@@ -105,11 +105,11 @@
 
   {% include metadata-hook.html %}
 
-  {% if jekyll.environment == 'production' and webmaster_verifications.google %}
-    <meta name="google-site-verification" content="{{ webmaster_verifications.google }}" />
+  {% if jekyll.environment == 'production' and site.analytics.google.id %}
+    {% include analytics/google.html %}
   {% endif %}
 
-  {% if jekyll.environment == 'production' and site.analytics.google.id %}
-    {% include analytics.html %}
+  {% if jekyll.environment == 'production' and site.analytics.clarity.id %}
+    {% include analytics/clarity.html %}
   {% endif %}
 </head>
