feat: Improve mode toggle

--- a/_includes/mode-toggle.html
+++ b/_includes/mode-toggle.html
@@ -1,1 +1,1 @@
-404: Not Found
+<i id="mode-toggle" class="fas fa-adjust fa-fw" data-toggle="tooltip" data-placement="bottom" title="Switch Mode"></i>
